--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header class="site-header px2 px-responsive">
-  <div class="mt2 wrap">
-    <div class="measure">
-      <a href="{{ site.url }}" class="site-title">{{ site.title }}</a>
-      <nav class="site-nav right">
-        {% include navigation.html %}
-      </nav>
-      <div class="clearfix"></div>
-      {% if site.show_social_icons %}
-        {% include social_links.html %}
-      {% endif %}
-    </div>
-  </div>
+	<div class="wrap">
+		<div class="measure">
+			<a href="/" class="site-title">
+				<img src="/
+				images/logo.svg" alt="logo" class="site-title-image">
+			</a>
+			{% if site.show_social_icons %}
+				{% include social_links.html %}
+			{% endif %}
+		</div>
+	</div>
+	<div class="clearfix"></div>
 </header>
