--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -24,6 +24,8 @@ html, body {
 img {
   width: auto;
   max-width: 100%;
+  display: block;
+  margin: 0 auto;
 }
 
 .site-wrap {
@@ -57,6 +59,9 @@ body {
   width: 100%;
 }
 
+.site-header {
+  padding-top: 2rem;
+}
 .site-header a {
   color: #333;
   font-weight: 300;
@@ -314,9 +319,9 @@ h6,
 }
 
 .social-icons {
-    padding: 0.5em 0 0 0;
     font-size: 1.25rem;
-    width: 100%;
+    float: right;
+    padding-top: 3px;
 }
 .social-icons a.fa {
     padding: 0.2em;
@@ -330,7 +335,10 @@ h6,
     position: relative;
     top: 0.1em;
 }
-
+.site-title-image {
+    width: 114px;
+    height: 28px;
+}
 @media screen and (min-width: 48em) {
   .site-header .site-title {
     float: left;
