feat(icons): replace FA with base64 iccons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
 <header class="site-header px2 px-responsive">
 	<div class="wrap">
 		<div class="measure">
-			<a href="/" class="site-title">
-				<img src="/
-				images/logo.svg" alt="logo" class="site-title-image">
-			</a>
+			<a href="/" class="site-title"> </a>
 			{% if site.show_social_icons %}
 				{% include social_links.html %}
 			{% endif %}
