--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,9 @@ layout: default
 		<div class="post ml2">
 			<a href="{{ post.url | prepend: site.baseurl }}" class="post-link">
 				<h4 class="post-title">{{ post.title }}</h4>
+				{% if post.summary %}
 				<p class="post-summary">{{ post.summary }}</p>
+				{% endif %}
 			</a>
 		</div>
 	{% endfor %}
