--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -148,6 +148,10 @@ table {
   margin: 0;
 }
 
+.post {
+  font-family: Georgia, serif;
+}
+
 .posts .post {
   margin-bottom: 0.75em;
   padding-bottom: .375em;
