--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -328,7 +328,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Georgia, serif;
   font-weight: 900;
   line-height: 1.2;
   margin: 1em 0 0.5em;
@@ -392,7 +392,7 @@ h6,
   .p,
   p,
   li {
-    font-size: 1.25rem;
+    font-size: 1.4rem;
     line-height: 1.8;
   }
 
