--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -149,7 +149,7 @@ table {
 }
 
 .post {
-  font-family: Georgia, serif;
+  font-family: 'Proxima Nova Regular', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .posts .post {
@@ -328,7 +328,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: Georgia, serif;
+  font-family: 'Proxima Nova Regular', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 900;
   line-height: 1.2;
   margin: 1em 0 0.5em;
