--- a/_sass/_basscss.scss
+++ b/_sass/_basscss.scss
@@ -28,7 +28,7 @@ article, aside, details, figcaption, figure, footer, header, main, nav, section,
 }
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Proxima Nova Regular', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
   line-height: 1.5rem;
   font-weight: 400;
 }
