--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -14,7 +14,7 @@
 */
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Proxima Nova Regular', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 html, body {
@@ -148,10 +148,6 @@ table {
   margin: 0;
 }
 
-.post {
-  font-family: 'Proxima Nova Regular', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
-}
-
 .posts .post {
   margin-bottom: 0.75em;
   padding-bottom: .375em;
@@ -162,6 +158,10 @@ table {
   border-bottom: none;
   margin-bottom: .375em;
   padding-bottom: 0;
+}
+
+.post-link {
+  display: block;
 }
 
 .post-link .post-title {
@@ -186,7 +186,6 @@ table {
 .pagination,
 .button {
   font-size: 1rem;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 300;
   text-align: center;
 }
@@ -249,7 +248,6 @@ table {
 }
 
 form {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 300;
   font-size: 1rem;
 }
@@ -259,8 +257,7 @@ textarea.input {
 }
 
 p {
-  font-weight: 300;
-  line-height: 1.5;
+  line-height: 1.6;
   color: #333;
 }
 
@@ -332,7 +329,6 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: 'Proxima Nova Regular', 'Segoe UI', Roboto, 'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 900;
   line-height: 1.2;
   margin: 1em 0 0.5em;
@@ -361,6 +357,7 @@ h6,
     background-size: cover;
     @extend %logo
 }
+
 @media screen and (min-width: 48em) {
   .site-header .site-title {
     float: left;
@@ -393,11 +390,8 @@ h6,
     font-size: 1.150rem;
   }
 
-  .p,
-  p,
   li {
-    font-size: 1.4rem;
-    line-height: 1.8;
+    margin-bottom: 5px;
   }
 
   .small {
